# rusty_scheduler

./: Cargo.toml  README.md  build.rs  data.json  test.rc
src/: data.json  global.rs  main.rs  program.rs  utils.rs
src/arg_parser/: mod.rs
src/pst_data/: mod.rs
src/time/: day.rs  mod.rs  pattern.rs  schedule.rs
src/win/: mod.rs
