[package]
name = "rusty_scheduler"
description = "A Scheduler to organize your week"
author = "MutoX"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
lazy_static = "1.4.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
file_into_string = "*"
colored = "2.1.0"
winrt-notification = "0.5.1"
tray-item = "0.9.0"
[dependencies.windows]
version = "0.53.0"
features = [
    "ApplicationModel"
]


[build-dependencies]
embed-resource = "2.3"